ch7-ingress/labs/lab01/todo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
      - name: backend
        image: hoon9785/k8s-labs-todo-backend:latest
        ports:
        - containerPort: 8080
