ch7-ingress/labs/lab01/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
  - port: 5432
    targetPort: 5432
