ch7-ingress/labs/lab01/todo-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
  - port: 80
    targetPort: 8080
