ch7-ingress/labs/lab01/todo-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
  - port: 80
    targetPort: 3000
